Added color variables to sass

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -1,8 +1,10 @@
+@use "../sass/_colors/_colors.scss";
+
 * {
   box-sizing: border-box;
 }
 
 body {
   margin: 0;
-  background-color: black;
+  background-color: $background-color;
 }
