Added mixins rules and html header

--- a/sass/_colors/_colors.scss
+++ b/sass/_colors/_colors.scss
@@ -10,4 +10,5 @@ $big-box-blue-light: rgb(95, 46, 234);
 $big-box-blue-mid: rgb(84, 37, 220);
 $big-box-blue-dark: rgb(76, 30, 208);
 $text-grey: rgb(176, 174, 186);
+$border-grey: rgb(124, 122, 134);
 $text-violet: rgb(134, 97, 239);
