Changed font and border color in header h1

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -15,4 +15,9 @@ body {
   .header__inner {
     @include sectioned-boxes-inner();
   }
+  .header__h1 {
+    color: $header-text-color;
+    margin: 0;
+    font-size: 40px;
+  }
 }
