--- a/sass/_colors/_colors.scss
+++ b/sass/_colors/_colors.scss
@@ -1,4 +1,5 @@
 $background-color: #fff;
+$header-text-color: #5e59e7;
 $dark-blue: rgb(42, 0, 162);
 $pink-button: rgb(237, 46, 126);
 $text-black: #000;
@@ -10,5 +11,5 @@ $big-box-blue-light: rgb(95, 46, 234);
 $big-box-blue-mid: rgb(84, 37, 220);
 $big-box-blue-dark: rgb(76, 30, 208);
 $text-grey: rgb(176, 174, 186);
-$border-grey: rgb(124, 122, 134);
+$border-section-violet: #8a5fe7;
 $text-violet: rgb(134, 97, 239);
