--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -8,6 +8,7 @@
 body {
   margin: 0;
   background-color: $background-color;
+  font-family: sans-serif;
 }
 
 .header {
@@ -18,7 +19,8 @@ body {
   .header__h1 {
     color: $header-text-color;
     margin: 0;
-    font-size: 40px;
+    font-size: 35px;
+    font-weight: 800;
   }
   .fa-solid {
     color: $header-text-color;
