Changed font-color var to a more suitable name

--- a/sass/_colors/_colors.scss
+++ b/sass/_colors/_colors.scss
@@ -1,5 +1,5 @@
 $background-color: #fff;
-$header-text-color: #5e59e7;
+$title-text-color: #5e59e7;
 $dark-blue: rgb(42, 0, 162);
 $pink-button: rgb(237, 46, 126);
 $text-black: #000;
