--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -14,7 +14,7 @@ body {
 .header {
   @include sectioned-boxes(80px);
   .header__inner {
-    @include sectioned-boxes-inner();
+    @include sectioned-boxes-inner(row, $background-color);
   }
   .header__h1 {
     color: $title-text-color;
@@ -26,5 +26,12 @@ body {
     color: $title-text-color;
     align-items: center;
     display: flex;
+  }
+}
+
+.section-media {
+  @include sectioned-boxes(100%);
+  .section-media__inner {
+    @include sectioned-boxes-inner(column, $dark-blue);
   }
 }
