--- a/sass/_mixins/_mixins.scss
+++ b/sass/_mixins/_mixins.scss
@@ -6,7 +6,11 @@
   display: flex;
   align-items: center;
 }
-@mixin sectioned-boxes-inner($flex-direction, $background-palette) {
+@mixin sectioned-boxes-inner(
+  $flex-direction,
+  $background-palette,
+  $justify-content
+) {
   background-color: $background-palette;
   width: 100%;
   height: 100%;
@@ -14,5 +18,5 @@
   margin-right: 5%;
   display: flex;
   flex-direction: $flex-direction;
-  justify-content: space-between;
+  justify-content: $justify-content;
 }
