--- a/sass/_partials/_section-one.scss
+++ b/sass/_partials/_section-one.scss
@@ -23,3 +23,21 @@
     }
   }
 }
+
+@media (min-width: 1000px) {
+  .section-top {
+    .section-top__form {
+      flex-direction: row;
+      justify-content: space-between;
+      margin: 0;
+      width: 100%;
+      input {
+        width: 100%;
+        height: 20%;
+        border: 2px solid $text-black;
+        border-radius: 20px;
+        margin: 0 2%;
+      }
+    }
+  }
+}
