Added width variable to input box mixin

--- a/sass/_mixins/_mixins.scss
+++ b/sass/_mixins/_mixins.scss
@@ -21,12 +21,12 @@
   justify-content: $justify-content;
 }
 
-@mixin input-box($border, $box-background-color, $height) {
+@mixin input-box($border, $box-background-color, $height, $width) {
   border-radius: 20px;
   background-color: $box-background-color;
   border: $border;
   height: $height;
-  width: 100%;
+  width: $width;
 }
 
 @mixin submit-button($height) {
