--- a/sass/_partials/_section-one.scss
+++ b/sass/_partials/_section-one.scss
@@ -31,7 +31,7 @@
       justify-content: space-between;
       margin: 0;
       width: 100%;
-      input {
+      &__input {
         width: 100%;
         height: 20%;
         border: 2px solid $text-black;
