Changed padding for inputs in first section

--- a/sass/_mixins/_mixins.scss
+++ b/sass/_mixins/_mixins.scss
@@ -29,12 +29,12 @@
   width: $width;
 }
 
-@mixin submit-button($height) {
+@mixin submit-button($height, $width) {
   background-color: $pink-button;
   color: $background-color;
   font-size: 14px;
   border: none;
   border-radius: 20px;
-  width: 100%;
+  width: $width;
   height: $height;
 }
