--- a/sass/_colors/_colors.scss
+++ b/sass/_colors/_colors.scss
@@ -1,4 +1,5 @@
 $background-color: #fff;
+$box-grey: rgb(142, 133, 166);
 $title-text-color: #5e59e7;
 $dark-blue: rgb(42, 0, 162);
 $pink-button: rgb(237, 46, 126);
