--- a/sass/_partials/_section-one.scss
+++ b/sass/_partials/_section-one.scss
@@ -19,7 +19,7 @@
       }
     }
     .section-top__submit-button {
-      @include submit-button(20%);
+      @include submit-button(20%, 100%);
     }
   }
 }
@@ -31,13 +31,26 @@
       justify-content: space-between;
       margin: 0;
       width: 100%;
-      &__input {
+      .section-top__input {
+        @include input-box(2px solid black, $box-grey, 100%, 20%);
         width: 100%;
         height: 20%;
         border: 2px solid $text-black;
         border-radius: 20px;
         margin: 0 2%;
       }
+      .section-top__input:nth-child(1) {
+        width: 60%;
+      }
+      .section-top__input:nth-child(2) {
+        width: 20%;
+      }
+      .section-top__input:nth-child(3) {
+        width: 20%;
+      }
+    }
+    .section-top__submit-button {
+      @include submit-button(20%, 20%);
     }
   }
 }
