--- a/sass/_partials/_section-one.scss
+++ b/sass/_partials/_section-one.scss
@@ -11,11 +11,8 @@
       @include sectioned-boxes-inner(column, $background-color, space-around);
       width: 90%;
       align-items: center;
-      input {
-        width: 100%;
-        height: 20%;
-        border: 2px solid $text-black;
-        border-radius: 20px;
+      .section-top__input {
+        @include input-box(2px solid black, $box-grey, 20%, 100%);
       }
     }
     .section-top__submit-button {
