Added section three green & red boxes

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -3,6 +3,7 @@
 @import "../sass/_partials/_headers.scss";
 @import "../sass/_partials/_section-one.scss";
 @import "../sass/_partials/_section-two.scss";
+@import "../sass/_partials/_section-three.scss";
 @import "../sass/_partials/_lists.scss";
 
 * {
