--- a/sass/_colors/_colors.scss
+++ b/sass/_colors/_colors.scss
@@ -14,3 +14,7 @@ $big-box-blue-dark: rgb(76, 30, 208);
 $text-grey: rgb(176, 174, 186);
 $border-section-violet: #8a5fe7;
 $text-violet: rgb(134, 97, 239);
+$green-box-background: #8bbfaf;
+$green-box-border: #2c715b;
+$red-box-background: #ca869e;
+$red-box-border: #cd3743;
