Adjusted boxes colors

--- a/sass/_partials/_section-three.scss
+++ b/sass/_partials/_section-three.scss
@@ -9,11 +9,13 @@
     background-color: $green-box-background;
     border: 2px solid $green-box-border;
     border-radius: 20px;
+    color: $green-box-border;
   }
   &__red-box {
     background-color: $red-box-background;
     border: 2px solid $red-box-border;
     border-radius: 20px;
     margin-top: 5%;
+    color: $red-box-border;
   }
 }
