Added blue box to third section

--- a/sass/_colors/_colors.scss
+++ b/sass/_colors/_colors.scss
@@ -18,3 +18,4 @@ $green-box-background: #d7f4eb;
 $green-box-border: #0cb840;
 $red-box-background: #eec7d9;
 $red-box-border: #c01643;
+$blue-box-background: #5019d1;
