--- a/sass/_mixins/_mixins.scss
+++ b/sass/_mixins/_mixins.scss
@@ -29,8 +29,8 @@
   width: $width;
 }
 
-@mixin submit-button($height, $width) {
-  background-color: $pink-button;
+@mixin submit-button($height, $width, $button-background-color) {
+  background-color: $button-background-color;
   color: $background-color;
   font-size: 14px;
   border: none;
