--- a/sass/_partials/_section-three.scss
+++ b/sass/_partials/_section-three.scss
@@ -4,16 +4,34 @@
     @include sectioned-boxes-inner(column, $background-color, space-around);
   }
   &__green-box {
+    display: flex;
+    align-items: center;
     background-color: $green-box-background;
     border: 2px solid $green-box-border;
     border-radius: 20px;
     color: $green-box-border;
+    i {
+      align-self: start;
+      padding: 4% 3%;
+    }
+    .fa-x {
+      align-self: center;
+    }
   }
   &__red-box {
+    display: flex;
+    align-items: center;
     background-color: $red-box-background;
     border: 2px solid $red-box-border;
     border-radius: 20px;
     color: $red-box-border;
+    i {
+      align-self: start;
+      padding: 4% 3%;
+    }
+    .fa-x {
+      align-self: center;
+    }
   }
   &__blue-box {
     background-color: $blue-box-background;
@@ -29,5 +47,6 @@
   &__button {
     @include submit-button(60px, 80%, transparent);
     border: 2px solid white;
+    border-radius: 40px;
   }
 }
