--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -13,9 +13,5 @@
 body {
   margin: 0;
   background-color: $background-color;
-  font-family: sans-serif;
-}
-
-.star {
-  width: 60px;
+  font-family: poppins, sans-serif;
 }
