Changed sizing of boxes in 3rd section

--- a/sass/_partials/_section-three.scss
+++ b/sass/_partials/_section-three.scss
@@ -11,8 +11,15 @@
     border: 2px solid $green-box-border;
     border-radius: 20px;
     color: $green-box-border;
+    p {
+      flex: 8;
+    }
     i {
-      align-self: start;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex: 1;
+      align-self: center;
     }
     .fa-x {
       align-self: center;
@@ -26,8 +33,15 @@
     border: 2px solid $red-box-border;
     border-radius: 20px;
     color: $red-box-border;
+    p {
+      flex: 8;
+    }
     i {
-      align-self: start;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex: 1;
+      align-self: center;
     }
     .fa-x {
       align-self: center;
