--- a/sass/_partials/_section-one.scss
+++ b/sass/_partials/_section-one.scss
@@ -6,7 +6,8 @@
     padding-bottom: 5%;
     .section-top__form {
       @include sectioned-boxes-inner(column, $background-color, space-around);
-      width: 90%;
+      margin: 0;
+      width: 100%;
       align-items: center;
       .section-top__input {
         @include input-box(2px solid black, $box-grey, 20%, 100%);
