section fourth desktop skeleton created

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -5,6 +5,7 @@
 @import "../sass/_partials/_section-two.scss";
 @import "../sass/_partials/_section-three.scss";
 @import "../sass/_partials/_lists.scss";
+@import "../sass/_partials/_section-four.scss";
 
 * {
   box-sizing: border-box;
