--- a/sass/_partials/_section-two.scss
+++ b/sass/_partials/_section-two.scss
@@ -65,6 +65,8 @@
   display: flex;
   flex-direction: column;
   padding: 0;
+  margin: 5% 0;
+  border-bottom: 2px solid $box-grey;
   &__location-detail {
     margin: 0;
   }
