Removed border bottom for last child

--- a/sass/_partials/_section-two.scss
+++ b/sass/_partials/_section-two.scss
@@ -88,6 +88,9 @@
     margin-top: 5%;
   }
 }
+.First-research:last-child {
+  border-bottom: none;
+}
 .First-research .First-research__image-house > img {
   width: 60%;
 }
