Added some padding to input-box mixin

--- a/sass/_mixins/_mixins.scss
+++ b/sass/_mixins/_mixins.scss
@@ -27,6 +27,7 @@
   border: $border;
   height: $height;
   width: $width;
+  padding: 0 2%;
 }
 
 @mixin submit-button($height, $width, $button-background-color) {
