--- a/sass/_partials/_section-four.scss
+++ b/sass/_partials/_section-four.scss
@@ -1,3 +1,16 @@
+.section-fourth {
+  @include sectioned-boxes-inner(row, $background-color, space-between);
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  font-size: 14px;
+  & ul {
+    padding: 0;
+  }
+  & li {
+    list-style: none;
+  }
+}
+
 .summary-copyright {
   &__title {
     color: $title-text-color;
@@ -25,7 +38,7 @@
 
 @media (max-width: 1000px) {
   .services {
-    visibility: hidden;
+    display: none;
   }
 }
 
@@ -40,7 +53,7 @@
 
 @media (max-width: 1000px) {
   .continents {
-    visibility: hidden;
+    display: none;
   }
 }
 
@@ -48,4 +61,9 @@
   &__address {
     color: $text-grey;
   }
+}
+
+.summary-copyright {
+  grid-column: 1 / 3;
+  max-width: 250px;
 }
