--- a/sass/_partials/_section-four.scss
+++ b/sass/_partials/_section-four.scss
@@ -1,13 +1,17 @@
 .section-fourth {
-  @include sectioned-boxes-inner(row, $background-color, space-between);
-  display: grid;
-  grid-template-columns: repeat(5, 1fr);
+  @include sectioned-boxes-inner(column, $background-color, space-between);
+  text-align: center;
   font-size: 14px;
+  @media (min-width: 1000px) {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+  }
   & ul {
     padding: 0;
   }
   & li {
     list-style: none;
+    padding-top: 22px;
   }
 }
 
@@ -20,6 +24,7 @@
   }
   &__copyright {
     color: $text-grey;
+    font-weight: bold;
   }
 }
 
@@ -60,10 +65,18 @@
 .contact {
   &__address {
     color: $text-grey;
+    @media (min-width: 1000px) {
+      max-width: 140px;
+    }
+  }
+  & a {
+    text-decoration: none;
   }
 }
 
 .summary-copyright {
   grid-column: 1 / 3;
-  max-width: 250px;
+  @media (min-width: 1000px) {
+    max-width: 280px;
+  }
 }
