Reduced number of color variables

--- a/sass/_colors/_colors.scss
+++ b/sass/_colors/_colors.scss
@@ -1,21 +1,5 @@
-$background-color: #fff;
-$box-grey: rgb(209, 201, 231);
-$title-text-color: #5e59e7;
-$dark-blue: rgb(42, 0, 162);
-$pink-button: rgb(237, 46, 126);
-$text-black: #000;
-$border-green: rgb(181, 238, 222);
-$content-green: rgb(242, 255, 251);
-$border-pink: rgb(246, 149, 189);
-$content-pink: rgb(255, 243, 248);
-$big-box-blue-light: rgb(95, 46, 234);
-$big-box-blue-mid: rgb(84, 37, 220);
-$big-box-blue-dark: rgb(76, 30, 208);
-$text-grey: rgb(176, 174, 186);
-$border-section-violet: #8a5fe7;
-$text-violet: rgb(134, 97, 239);
-$green-box-background: #d7f4eb;
-$green-box-border: #0cb840;
-$red-box-background: #eec7d9;
-$red-box-border: #c01643;
-$blue-box-background: #5019d1;
+$first-color: #fff;
+$second-color: #5e59e7;
+$third-color: #5019d1;
+$fourth-color: rgb(209, 201, 231);
+$fifth-color: rgb(237, 46, 126);
