--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -13,6 +13,6 @@
 
 body {
   margin: 0;
-  background-color: $background-color;
+  background-color: $first-color;
   font-family: poppins, sans-serif;
 }
