--- a/sass/_mixins/_mixins.scss
+++ b/sass/_mixins/_mixins.scss
@@ -1,7 +1,7 @@
 @import "../_colors/_colors.scss";
 
 @mixin sectioned-boxes($height) {
-  border-bottom: 1px solid $border-section-violet;
+  border-bottom: 1px solid $second-color;
   height: $height;
   display: flex;
   align-items: center;
@@ -33,7 +33,7 @@
 @mixin submit-button($height, $width, $button-background-color) {
   font-family: Poppins;
   background-color: $button-background-color;
-  color: $background-color;
+  color: $first-color;
   font-size: 14px;
   border: none;
   border-radius: 30px;
