--- a/sass/_partials/_section-four.scss
+++ b/sass/_partials/_section-four.scss
@@ -1,11 +1,11 @@
 .section-fourth {
   @include sectioned-boxes(500px);
   &__inner {
-    @include sectioned-boxes-inner(column, $background-color, space-around);
+    @include sectioned-boxes-inner(column, $first-color, space-around);
   }
   @media (min-width: 1000px) {
     &__inner {
-      @include sectioned-boxes-inner(row, $background-color, space-around);
+      @include sectioned-boxes-inner(row, $first-color, space-around);
     }
   }
 }
@@ -16,25 +16,25 @@
     text-align: left;
   }
   &__title {
-    color: $title-text-color;
+    color: $second-color;
   }
   &__summary {
-    color: $text-grey;
+    color: $fourth-color;
   }
   &__copyright {
-    color: $text-grey;
+    color: $fourth-color;
     font-weight: bold;
   }
 }
 
 .services {
   &__title {
-    color: $text-black;
+    color: black;
   }
   &__list {
     padding: 0;
     list-style: none;
-    color: $text-grey;
+    color: $fourth-color;
   }
 }
 
@@ -46,12 +46,12 @@
 
 .continents {
   &__title {
-    color: $text-black;
+    color: black;
   }
   &__list {
     padding: 0;
     list-style: none;
-    color: $text-grey;
+    color: $fourth-color;
   }
 }
 
@@ -67,13 +67,13 @@
     text-align: left;
   }
   &__address {
-    color: $text-grey;
+    color: $fourth-color;
     @media (min-width: 1000px) {
       max-width: 140px;
     }
   }
   &__title {
-    color: $text-black;
+    color: black;
   }
   & a {
     text-decoration: none;
