--- a/sass/_partials/_section-one.scss
+++ b/sass/_partials/_section-one.scss
@@ -1,20 +1,20 @@
 .section-top {
   @include sectioned-boxes(400px);
   &__inner {
-    @include sectioned-boxes-inner(column, $background-color, start);
+    @include sectioned-boxes-inner(column, $first-color, start);
     padding-top: 5%;
     padding-bottom: 5%;
     .section-top__form {
-      @include sectioned-boxes-inner(column, $background-color, space-around);
+      @include sectioned-boxes-inner(column, $first-color, space-around);
       margin: 0;
       width: 100%;
       align-items: center;
       .section-top__input {
-        @include input-box(2px solid black, $box-grey, 20%, 100%);
+        @include input-box(2px solid black, $fourth-color, 20%, 100%);
       }
     }
     .section-top__submit-button {
-      @include submit-button(20%, 100%, $pink-button);
+      @include submit-button(20%, 100%, $fifth-color);
     }
   }
 }
@@ -31,10 +31,10 @@
       margin: 0;
       width: 100%;
       .section-top__input {
-        @include input-box(2px solid black, $box-grey, 100%, 20%);
+        @include input-box(2px solid black, $fourth-color, 100%, 20%);
         width: 100%;
         height: 40%;
-        border: 2px solid $text-black;
+        border: 2px solid black;
         border-radius: 20px;
         margin: 0 2%;
       }
@@ -49,7 +49,7 @@
       }
     }
     .section-top__submit-button {
-      @include submit-button(20%, 20%, $pink-button);
+      @include submit-button(20%, 20%, $fifth-color);
     }
   }
 }
