--- a/sass/_partials/_section-two.scss
+++ b/sass/_partials/_section-two.scss
@@ -1,15 +1,19 @@
 .section-media {
   @include sectioned-boxes(100%);
   .section-media__inner {
-    @include sectioned-boxes-inner(column, $background-color, space-between);
+    @include sectioned-boxes-inner(
+      column,
+      main-background-color,
+      space-between
+    );
     @media (min-width: 1000px) {
-      @include sectioned-boxes-inner(row, $background-color, space-between);
+      @include sectioned-boxes-inner(row, $first-color, space-between);
     }
   }
   &__search-box {
     height: 500px;
     width: 100%;
-    background-color: $dark-blue;
+    background-color: $third-color;
     border-radius: 20px;
     margin-top: 5%;
   }
@@ -17,7 +21,7 @@
     &__search-box {
       height: 500px;
       width: 40%;
-      background-color: $dark-blue;
+      background-color: $third-color;
       border-radius: 20px;
       margin-top: 5%;
     }
@@ -41,25 +45,25 @@
   &__option-field {
     display: flex;
     flex-direction: column;
-    color: $background-color;
+    color: $first-color;
     align-items: left;
     height: 25%;
   }
   .section-media__input-button {
-    @include submit-button(12%, 100%, $pink-button);
+    @include submit-button(12%, 100%, $fifth-color);
   }
   &__tittle {
     margin-left: 30px;
-    color: $background-color;
+    color: $first-color;
     font-size: medium;
   }
   &__input-button {
-    @include submit-button(50%, 100%, $pink-button);
+    @include submit-button(50%, 100%, $fifth-color);
   }
 }
 
 .section-media__field-to-complete {
-  @include input-box(none, $background-color, 50%, 100%);
+  @include input-box(none, $first-color, 50%, 100%);
 }
 .First-research {
   display: flex;
@@ -67,7 +71,7 @@
 
   padding: 0;
   margin: 5% 0;
-  border-bottom: 2px solid $box-grey;
+  border-bottom: 2px solid $fourth-color;
   &__image-house > img {
     width: 60%;
   }
@@ -82,16 +86,16 @@
   }
   h3,
   h4 {
-    color: $blue-box-background;
+    color: $third-color;
     margin: 0;
   }
   &__show-on-map {
     margin: 0;
   }
   &__button-booking {
-    @include submit-button(60%, 40%, $background-color);
-    color: $blue-box-background;
-    border: 2px solid $box-grey;
+    @include submit-button(60%, 40%, $first-color);
+    color: $third-color;
+    border: 2px solid $fourth-color;
     margin-top: 5%;
   }
   &__text-wrap {
@@ -106,9 +110,9 @@
   .First-research {
     flex-direction: row;
     &__button-booking {
-      @include submit-button(15%, 50%, $background-color);
-      color: $blue-box-background;
-      border: 2px solid $box-grey;
+      @include submit-button(15%, 50%, $first-color);
+      color: $third-color;
+      border: 2px solid $fourth-color;
       margin-top: 5%;
     }
     &__image-house > img {
